--- a/tests/Zul scoreMatching mit genetic_matching.ipynb
+++ b/tests/Zul scoreMatching mit genetic_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "51bd6792",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "24a3188b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "cba4045a",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "32ddf68d",
    "metadata": {},
    "outputs": [
@@ -132,14 +132,14 @@
       "Population size: 50\n",
       "Generations: 100\n",
       "Tasks: 8, People: 150\n",
-      "Generation 0: Best=-7020.5, Avg=-8784.8\n",
-      "Generation 20: Best=-6538.8, Avg=-6700.8\n",
-      "Generation 40: Best=-6136.3, Avg=-6519.6\n",
-      "Generation 60: Best=-6136.3, Avg=-6376.0\n",
-      "Generation 80: Best=-5031.1, Avg=-5933.0\n",
-      "Generation 99: Best=-5031.1, Avg=-5486.9\n",
-      "Execution time: 3.660 seconds\n",
-      "Best fitness: -5031.1\n",
+      "Generation 0: Best=-7516.8 (Note: 1.00), Avg=-8631.0 (Note: 3.86)\n",
+      "Generation 20: Best=-5905.2 (Note: 1.00), Avg=-6641.8 (Note: 3.62)\n",
+      "Generation 40: Best=-4871.7 (Note: 1.00), Avg=-5521.0 (Note: 4.08)\n",
+      "Generation 60: Best=-4871.7 (Note: 1.00), Avg=-5351.1 (Note: 4.07)\n",
+      "Generation 80: Best=-4871.7 (Note: 1.00), Avg=-5194.4 (Note: 4.21)\n",
+      "Generation 99: Best=-4871.7 (Note: 1.00), Avg=-5327.1 (Note: 3.93)\n",
+      "Execution time: 3.348 seconds\n",
+      "Best fitness: -4871.7\n",
       "Found assignments: 8\n",
       "\n",
       "Trying parameter set 2/3\n",
@@ -148,17 +148,17 @@
       "Population size: 100\n",
       "Generations: 150\n",
       "Tasks: 8, People: 150\n",
-      "Generation 0: Best=-7020.5, Avg=-8793.1\n",
-      "Generation 20: Best=-6164.1, Avg=-6256.8\n",
-      "Generation 40: Best=-5682.4, Avg=-5883.6\n",
-      "Generation 60: Best=-5182.7, Avg=-5299.2\n",
-      "Generation 80: Best=-4577.2, Avg=-4780.0\n",
-      "Generation 100: Best=-4577.2, Avg=-4779.4\n",
-      "Generation 120: Best=-4577.2, Avg=-4808.8\n",
-      "Generation 140: Best=-4577.2, Avg=-4741.5\n",
-      "Generation 149: Best=-4577.2, Avg=-4798.9\n",
-      "Execution time: 10.119 seconds\n",
-      "Best fitness: -4577.2\n",
+      "Generation 0: Best=-7420.7 (Note: 1.00), Avg=-8516.6 (Note: 3.82)\n",
+      "Generation 20: Best=-5754.2 (Note: 1.00), Avg=-5868.6 (Note: 4.61)\n",
+      "Generation 40: Best=-5326.0 (Note: 1.00), Avg=-5447.7 (Note: 4.70)\n",
+      "Generation 60: Best=-4392.7 (Note: 1.00), Avg=-4576.7 (Note: 4.51)\n",
+      "Generation 80: Best=-4392.3 (Note: 1.00), Avg=-4637.7 (Note: 4.39)\n",
+      "Generation 100: Best=-4392.3 (Note: 1.00), Avg=-4587.5 (Note: 4.34)\n",
+      "Generation 120: Best=-4392.3 (Note: 1.00), Avg=-4584.6 (Note: 4.49)\n",
+      "Generation 140: Best=-4392.2 (Note: 1.00), Avg=-4553.2 (Note: 4.57)\n",
+      "Generation 149: Best=-4392.2 (Note: 1.00), Avg=-4600.6 (Note: 4.68)\n",
+      "Execution time: 10.393 seconds\n",
+      "Best fitness: -4392.2\n",
       "Found assignments: 8\n",
       "\n",
       "Trying parameter set 3/3\n",
@@ -167,19 +167,19 @@
       "Population size: 75\n",
       "Generations: 200\n",
       "Tasks: 8, People: 150\n",
-      "Generation 0: Best=-7394.5, Avg=-8655.1\n",
-      "Generation 20: Best=-6012.4, Avg=-6480.7\n",
-      "Generation 40: Best=-4979.8, Avg=-5732.9\n",
-      "Generation 60: Best=-4979.8, Avg=-5811.8\n",
-      "Generation 80: Best=-4577.2, Avg=-5526.5\n",
-      "Generation 100: Best=-4577.2, Avg=-5281.2\n",
-      "Generation 120: Best=-4577.2, Avg=-5405.5\n",
-      "Generation 140: Best=-4577.2, Avg=-5547.9\n",
-      "Generation 160: Best=-4577.2, Avg=-5405.1\n",
-      "Generation 180: Best=-4577.2, Avg=-5625.3\n",
-      "Generation 199: Best=-4577.2, Avg=-5383.2\n",
-      "Execution time: 10.238 seconds\n",
-      "Best fitness: -4577.2\n",
+      "Generation 0: Best=-7393.8 (Note: 1.00), Avg=-8536.0 (Note: 3.60)\n",
+      "Generation 20: Best=-5321.0 (Note: 1.00), Avg=-6187.6 (Note: 3.65)\n",
+      "Generation 40: Best=-4392.7 (Note: 1.00), Avg=-5578.7 (Note: 3.22)\n",
+      "Generation 60: Best=-4392.2 (Note: 1.00), Avg=-5307.7 (Note: 3.86)\n",
+      "Generation 80: Best=-4392.2 (Note: 1.00), Avg=-5469.1 (Note: 3.49)\n",
+      "Generation 100: Best=-4392.2 (Note: 1.00), Avg=-5461.6 (Note: 3.43)\n",
+      "Generation 120: Best=-4392.2 (Note: 1.00), Avg=-5493.3 (Note: 3.28)\n",
+      "Generation 140: Best=-4392.2 (Note: 1.00), Avg=-5313.8 (Note: 3.65)\n",
+      "Generation 160: Best=-4392.2 (Note: 1.00), Avg=-5489.9 (Note: 3.37)\n",
+      "Generation 180: Best=-4392.2 (Note: 1.00), Avg=-5467.4 (Note: 3.86)\n",
+      "Generation 199: Best=-4392.2 (Note: 1.00), Avg=-5315.9 (Note: 3.84)\n",
+      "Execution time: 10.065 seconds\n",
+      "Best fitness: -4392.2\n",
       "Found assignments: 8\n"
      ]
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "d9c544a5",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
       "\n",
       "Genetic Algorithm Results:\n",
       "Found 8 assignments\n",
-      "Execution time: 24.023 seconds\n"
+      "Execution time: 23.814 seconds\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "011efc21",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "705b6139",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "b755e3a1",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
    "source": [
     "# Save results\n",
     "df_matching = pd.DataFrame(matching_ergebnisse)\n",
-    "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
+    "df_matching.to_csv(\"matching mit genetic_ergebnis.csv\", index=False)\n",
     "print(f\"\\nMatching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
   },
